Fix password style on iOS.

--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -37,7 +37,6 @@
     &-button {
         align-items: center;
         display: grid;
-        height: 100%;
 
         &:focus {
             outline: revert;
