--- a/resources/sass/register.scss
+++ b/resources/sass/register.scss
@@ -44,7 +44,6 @@
     &-button {
         align-items: center;
         display: grid;
-        height: 100%;
 
         &:focus {
             outline: revert;
